<resources>
    <string name="app_name">Financial Aid App</string>

    <!--Login-->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Login</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_dialog_title">Authenticating…</string>
    <string name="login_failed">Login failed!</string>

    <!--Register-->
    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat Password</string>
    <string name="user_register">Register</string>
    <string name="register_dialog_title">Registering user</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="password_not_match">"Passwords do not match!"</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Financial Aid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fragment">Group payments fragment</string>

    <!-- Drawer options -->
    <string name="drawer_cash_control">Cash Flow Control</string>
    <string name="drawer_group_payments">Group Payments</string>
    <string name="drawer_statistics">Statistics</string>
    <string name="drawer_logout">Logout</string>

    <string name="transactions_balance">Balance</string>

    <!-- Accounts list empty state -->
    <string name="account_list_empty_title">No accounts</string>
    <string name="account_list_empty_suggestion">Add one to track your expenses!</string>

    <!-- Groups list empty state -->
    <string name="group_list_empty_title">No groups</string>
    <string name="group_list_empty_suggestion">Add one to track shared expenses!</string>

    <!-- Account register -->
    <string name="add_account">Add Account</string>
    <string name="add_account_name">Name</string>
    <string name="add_account_balance">Initial Balance</string>
    <string name="add_account_category">Category</string>
    <string name="edit_account">Edit Account</string>

    <!-- Transaction register -->
    <string name="add_transaction">Add Transaction</string>
    <string name="add_transaction_value">Value</string>
    <string name="add_transaction_account">Account</string>
    <string name="add_transaction_description">Description</string>
    <string name="add_transaction_category">Category</string>
    <string name="add_transaction_date">Date</string>
    <string name="edit_transaction">Edit Transaction</string>

    <!-- Category register -->
    <string name="add_category">Add Category</string>
    <string name="add_category_name">Name</string>
    <string name="add_category_type">Type</string>
    <string name="add_category_type_incoming">Incoming</string>
    <string name="add_category_type_outgoing">Outgoing</string>

    <!-- Snackbar feedback text -->
    <string name="undo">UNDO</string>

    <string name="account_created">Account created</string>
    <string name="account_updated">Account updated</string>
    <string name="account_removed">Account removed</string>

    <string name="transaction_created">Transaction created</string>
    <string name="transaction_updated">Transaction updated</string>
    <string name="transaction_removed">Transaction removed</string>

    <string name="group_created">Group created</string>
    <string name="group_updated">Group updated</string>
    <string name="group_removed">Group removed</string>

    <!-- Groups List Section Headers -->
    <string name="groups_header_online">Online groups</string>
    <string name="groups_header_offline">Local groups</string>

    <!-- Group summary -->
    <string name="group_summary_no_debts">There are no debts in this group yet.</string>
    <string name="group_summary_debt">%1$s owes %2$s %3$s\n</string>

    <!-- Create group labels -->
    <string name="online_group"> Multiple user group</string>
    <string name="offline_group"> Offline group</string>
    <string name="offline_default_member">You</string>

    <!-- Delete group -->
    <string name="delete_group_title">Remove group</string>
    <string name="delete_group_confirm">Are you sure you want to remove this group?</string>

    <!-- Exit group -->
    <string name="exit_group_title">Exit group</string>
    <string name="exit_group_confirm">Are you sure you want to exit this group?</string>

    <!-- Statistics strings -->
    <string name="last_seven_days_graph">Expenses in the last 7 days</string>
    <string name="transactions_per_account_chart">Transactions per Account</string>
    <string name="account_balances_graph">Balance per Account</string>

    <!-- API messages -->
    <string name="api_request_failed"> Communication with server failed.</string>

</resources>
