<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_accounts"
            android:icon="@drawable/ic_cash"
            android:title="@string/drawer_cash_control" />
        <item
            android:id="@+id/drawer_item_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/drawer_group_payments" />
        <item
            android:id="@+id/drawer_item_statistics"
            android:icon="@drawable/ic_menu_piechart"
            android:title="@string/drawer_statistics" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_logout"
                android:title="@string/drawer_logout" />
        </menu>
    </item>

</menu>
