<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fclug.financialaid.LoginActivity"
    android:background="@color/dialog_bg">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_menu_send"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="15dp"
        android:hint="@string/register_name"
        android:background="@drawable/edit_text_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_bg">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:hint="@string/register_username"
            android:background="@drawable/edit_text_bg"/>

        <ImageView
            android:id="@+id/register_feedback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@android:drawable/ic_delete"
            android:visibility="gone"/>

    </LinearLayout>


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="15dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/register_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="15dp"
        android:hint="@string/register_password_repeat"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:background="@drawable/edit_text_bg"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/user_register"
        android:layout_gravity="center"/>

</LinearLayout>
