<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fclug.financialaid.LoginActivity"
    android:background="@color/dialog_bg">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_menu_send"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_bg">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_account"
            android:layout_margin="10dp"/>


        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/login_username"
            android:background="@drawable/edit_text_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_bg">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_lock"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:background="@drawable/edit_text_bg"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_signin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login_signin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/login_signup"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login_signup"
        android:layout_gravity="center"/>

</LinearLayout>
