<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorStartBar">

        <TextView
            android:id="@+id/account_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_account_name"
            android:textSize="20sp"
            android:textColor="@color/color_black"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/add_account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/add_account_balance_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_account_balance"
            android:textSize="20sp"
            android:textColor="@color/color_black"
            android:layout_weight="2.5"/>

        <EditText
            android:id="@+id/add_account_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_account_category"
            android:textSize="20sp"
            android:textColor="@color/color_black"
            android:layout_weight="2"/>

        <Spinner
            android:id="@+id/add_account_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/account_types"
            android:layout_weight="3"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_bg"
        android:text="Confirm"/>

</LinearLayout>