<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300dp"
              android:layout_height="450dp"
              android:background="@color/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorStartBar">

        <TextView
            android:id="@+id/transaction_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:layout_gravity="center"
            android:textSize="@dimen/dialog_header_text_size"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_spacing"
        android:paddingStart="@dimen/dialog_margin"
        android:paddingEnd="@dimen/dialog_margin">

        <EditText
            android:id="@+id/add_category_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/dialog_special_margin"
            android:hint="@string/add_category_name"
            android:paddingStart="@dimen/dialog_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_spacing"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_spacing"
        android:paddingStart="@dimen/dialog_margin"
        android:paddingEnd="@dimen/dialog_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_type"/>

        <RadioGroup
            android:id="@+id/add_category_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dialog_margin">

            <RadioButton
                android:id="@+id/add_category_type_incoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_category_type_incoming"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/add_category_type_outgoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_category_type_outgoing"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_spacing"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_spacing"
        android:paddingStart="@dimen/dialog_margin"
        android:paddingEnd="@dimen/dialog_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.danielnilsson9.colorpickerview.view.ColorPickerView
                android:id="@+id/add_category_color_picker"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dialog_margin"
                android:paddingEnd="@dimen/dialog_margin"/>

            <com.github.danielnilsson9.colorpickerview.view.ColorPanelView
                android:id="@+id/add_category_color_viewer"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:paddingTop="@dimen/dialog_spacing"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:text="Confirm"/>

</LinearLayout>